Bug #36486 Falcon compilation fails on Solaris 10/x86
Submitted: 3 May 2008 12:43 Modified: 9 Oct 2008 14:10
Reporter: Hakan Kuecuekyilmaz
Status: Closed
Category:Server: Falcon Severity:S3 (Non-critical)
Version: OS:Sun Solaris (x86_64)
Assigned to: Bugs System Target Version:6.0.6
Triage: D2 (Serious) / R2 (Low) / E2 (Low)

[3 May 2008 12:43] Hakan Kuecuekyilmaz
Description:
Falcon compilation fails on Solaris 10/x86

How to repeat:
I messed up the Solaris version check for atomic_cas* function availability.

                 from BackLog.cpp:26:
Interlock.h:149:4: #error cas not defined. We need >= Solaris 10
Interlock.h:259:4: #error cas not defined. We need >= Solaris 10
In file included from Bitmap.h:27,
                 from BackLog.cpp:26:

Suggested fix:
Get version check right.
[3 May 2008 16:16] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/46328

ChangeSet@1.2666, 2008-05-03 16:17:43+02:00, hakank@lu0011.(none) +1 -0
  Fix for Bug#36486.
  gcc can use the assembler version of atomic_cas*.
[4 May 2008 23:30] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/46337

ChangeSet@1.2668, 2008-05-04 23:32:46+02:00, hakank@lu0011.(none) +1 -0
  Fix for Bug#36486, really.
[29 Aug 2008 3:32] Kevin Lewis
This fix is in version 6.0.6
[9 Oct 2008 14:10] Jon Stephens
Documented in the 6.0.6 changelog as follows:

        The server could not be compiled with Falcon support on Solaris/x86.