Fix for Bug#36486. gcc can use the assembler version of atomic_cas*.